--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <header>
-<h1>🛒 متجري الاحترافي</h1>
+<h1>MorStore</h1>
 <p>الدفع عند الاستلام</p>
 </header>
 <div class="container">
   <div class="products" id="products"></div>
   <div class="cart">
-    <h2>🧾 السلة</h2>
+    <h2> السلة</h2>
     <div id="cart-items"></div>
     <h3>المجموع: $<span id="total">0</span></h3>
-    <h2>📋 معلومات الزبون</h2>
+    <h2> معلومات الزبون</h2>
     <input type="text" id="name" placeholder="الاسم الكامل">
     <input type="tel" id="phone" placeholder="رقم الهاتف">
     <textarea id="address" placeholder="العنوان"></textarea>
@@ -27,3 +27,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
